made cahnages to style.css

--- a/style.css
+++ b/style.css
@@ -34,17 +34,16 @@ body {
 }
 
 .cupcake1 {
-    background-color: #ff006e;
+    background-color: #FFAD69;
 }
 
 .cupcake2 {
-    background-color: #fb5607;
+    background-color: #FF9F1C;
 }
 
 .cupcake3 {
-    background-color: #8338ec;
+    background-color: #F4C095;
 }
 
 .blue {
-    background-color: #3a86ff;
-}
+    background-color: #31081F;
